--- a/SimpleMVP/app/build.gradle
+++ b/SimpleMVP/app/build.gradle
@@ -17,6 +17,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    buildToolsVersion '26.0.2'
+    dataBinding {
+        enabled true
+    }
 }
 
 dependencies {
